--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,8 @@ dependencies:
   json_annotation: ^4.7.0
   freezed_annotation: ^2.2.0 
   flutter_bloc: ^8.1.1
-  meta: ^1.8.0
+  # flutter_hooks: ^0.18.5+1
+  meta: ^1.8.0 
 
 dev_dependencies:
   flutter_test:
