--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_bloc: ^8.1.1
   # flutter_hooks: ^0.18.5+1
   meta: ^1.8.0 
+  google_fonts: ^3.0.1 
 
 dev_dependencies:
   flutter_test:
@@ -48,3 +49,8 @@ flutter:
   assets:
     - assets/core/ 
     - assets/pieces/ 
+    
+  fonts:
+    - family: Schyler
+      fonts:
+        - asset: assets/fonts/Anton/Anton-Regular.ttf
